--- a/skillsStyles.css
+++ b/skillsStyles.css
@@ -62,6 +62,11 @@ h2 span{
     background-color: aliceblue;
 }
 
+.skills div:hover{
+    transform: translate(0, -10px);
+    background-color: aquamarine;
+}
+
 .skills div h3{
     margin-top: 20px;
     text-align: center;
